--- a/book/toc.html
+++ b/book/toc.html
@@ -27,6 +27,6 @@
         <!-- Custom theme stylesheets -->
     </head>
     <body class="sidebar-iframe-inner">
-        <ol class="chapter"><li class="chapter-item expanded "><a href="base58-encoding.html" target="_parent"><strong aria-hidden="true">1.</strong> Base58 Encoding in Bitcoin</a></li></ol>
+        <ol class="chapter"><li class="chapter-item expanded "><a href="base58-encoding.html" target="_parent"><strong aria-hidden="true">1.</strong> Base58 Encoding in Bitcoin</a></li><li class="chapter-item expanded "><a href="keys.html" target="_parent"><strong aria-hidden="true">2.</strong> Private keys and Public keys</a></li></ol>
     </body>
 </html>
