--- a/book/index.html
+++ b/book/index.html
@@ -203,12 +203,17 @@ Common prefixes include:
 <li>Compute a <strong>checksum</strong> via double SHA256 hashing.</li>
 <li>Combine and encode in Base58.</li>
 </ol>
+<h2 id="challenge"><a class="header" href="#challenge">Challenge</a></h2>
+<p>1.Given a  base58 <code>tprv</code>,  extract the private key and chaincode</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
+                            <a rel="next prefetch" href="keys.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -217,6 +222,9 @@ Common prefixes include:
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
+                    <a rel="next prefetch" href="keys.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
