--- a/book/index.html
+++ b/book/index.html
@@ -246,6 +246,8 @@ Common prefixes include:
         <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="mermaid.min.js"></script>
+        <script src="mermaid-init.js"></script>
 
 
     </div>
